RESOLVED FIXED228294
Attribution context causes some performance regressions
https://bugs.webkit.org/show_bug.cgi?id=228294
Summary Attribution context causes some performance regressions
Kate Cheney
Reported 2021-07-26 12:33:21 PDT
Attribution context causes some performance regressions
Attachments
Patch (2.08 KB, patch)
2021-07-26 12:34 PDT, Kate Cheney
no flags
Patch for landing (1.61 KB, patch)
2021-07-26 14:30 PDT, Kate Cheney
no flags
Kate Cheney
Comment 1 2021-07-26 12:34:16 PDT
Per Arne Vollan
Comment 2 2021-07-26 12:45:54 PDT
Comment on attachment 434225 [details] Patch R=me.
EWS
Comment 3 2021-07-26 13:40:16 PDT
Committed r280311 (239961@main): <https://commits.webkit.org/239961@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434225 [details].
Radar WebKit Bug Importer
Comment 4 2021-07-26 13:41:16 PDT
Darin Adler
Comment 5 2021-07-26 14:21:22 PDT
Comment on attachment 434225 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=434225&action=review > Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:61 > static void processPCMRequest(WebCore::PrivateClickMeasurement::PcmDataCarried, NSMutableURLRequest *) { }; > +static void overrideAttributionContext(NSMutableURLRequest *) { }; These semicolons should not be here.
Kate Cheney
Comment 6 2021-07-26 14:30:50 PDT
Reopening to attach new patch.
Kate Cheney
Comment 7 2021-07-26 14:30:52 PDT
Created attachment 434241 [details] Patch for landing
EWS
Comment 8 2021-07-26 14:59:22 PDT
Committed r280317 (239965@main): <https://commits.webkit.org/239965@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434241 [details].
Kate Cheney
Comment 9 2021-07-26 15:00:20 PDT
(In reply to Darin Adler from comment #5) > Comment on attachment 434225 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=434225&action=review > > > Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:61 > > static void processPCMRequest(WebCore::PrivateClickMeasurement::PcmDataCarried, NSMutableURLRequest *) { }; > > +static void overrideAttributionContext(NSMutableURLRequest *) { }; > > These semicolons should not be here. Thanks, fixed it in a followup.
Note You need to log in before you can comment on or make changes to this bug.