Attribution context causes some performance regressions https://bugs.webkit.org/show_bug.cgi?id=228294 <rdar://problem/76663528>

Reviewed by Per Arne Vollan.

Attribution context is used by the networking stack for a variety of
purposes, but is not always needed and can negatively affect
performance. For these reasons, we should override it in some cases.

* NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(overrideAttributionContext):
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):


Canonical link: https://commits.webkit.org/239961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280311 268f45cc-cd09-0410-ab3c-d52691b4dbfc